--- a/templates/en/patient_welcome.html
+++ b/templates/en/patient_welcome.html
@@ -18,7 +18,7 @@
   <div class="glass-box">
     <div class="emoji">💖</div>
     <p class="message">
-      Your glow is unmatched. We're thrilled you chose our Fractional Rejuvenation experience ✨
+      {{ welcome_message }}
     </p>
   </div>
   <p class="subtext">We’d love your feedback to keep improving.</p>
