--- a/templates/en/patient_welcome.html
+++ b/templates/en/patient_welcome.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="background" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; overflow: hidden;">
+  <div class="glow pink"></div>
+  <div class="glow wine"></div>
+</div>
+
 <div class="toggle-wrapper">
   <label class="switch">
     <input type="checkbox" id="darkToggle">
@@ -7,13 +12,7 @@
   </label>
 </div>
 
-<div class="background">
-  <div class="glow pink"></div>
-  <div class="glow wine"></div>
-</div>
-
-
-  <h1 class="title-color">🌸 Welcome, {{ patient_name }}!</h1>
+<h1 class="title-color">🌸 Welcome, {{ patient_name }}!</h1>
   
   <div class="glass-box">
     <div class="emoji">💖</div>
