--- a/templates/ar/patient_welcome.html
+++ b/templates/ar/patient_welcome.html
@@ -8,7 +8,7 @@
     </label>
   </div>
   
-  <div class="background">
+  <div class="background" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -1; overflow: hidden;">
     <div class="glow pink"></div>
     <div class="glow wine"></div>
   </div>
