--- a/templates/en/patient_welcome.html
+++ b/templates/en/patient_welcome.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
+
 {% block content %}
-<div class="background" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; overflow: hidden;">
+<div class="background" style="position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -1; overflow: hidden;">
   <div class="glow pink"></div>
   <div class="glow wine"></div>
 </div>
